# Arm64Elswitch

./: .gitignore  README.md  pyproject.toml
docs/: el_switch_constraints.md
src/el_switch_solver/: __init__.py  constraints.py  models.py  solver.py
tests/: test_solver.py
