[project]
name = "el-switch-solver"
version = "0.1.0"
description = "AArch64 Exception Level switching constraint solver"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
el-switch = "el_switch_solver.solver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/el_switch_solver"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
